# extract_color_themes

./: CMakeLists.txt  function.h  implementation.cpp  k_means_color_subtraction.cpp  main.cpp  select_principal_color_themes.cpp
